--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
@@ -14,83 +12,83 @@
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            android:src="@drawable/koi_story_logo"
+            android:layout_marginBottom="32dp"
             android:contentDescription="Koi Story Image"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/koi_story_logo"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="32dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_input"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:padding="12dp"
-            android:background="@drawable/rounded_input"
-            app:layout_constraintTop_toBottomOf="@id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/imageView" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_input"
             android:hint="Mật khẩu"
             android:inputType="textPassword"
-            android:layout_marginTop="8dp"
             android:padding="12dp"
-            android:background="@drawable/rounded_input"
-            app:layout_constraintTop_toBottomOf="@id/email"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/email" />
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Đăng nhập"
             android:background="@drawable/rounded_button"
-            app:layout_constraintTop_toBottomOf="@id/password"
+            android:text="Đăng nhập"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/password" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/loginButton"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/loginButton">
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
-                android:background="#BDBDBD"
-                android:layout_marginEnd="8dp" />
+                android:background="#BDBDBD" />
 
             <TextView
                 android:id="@+id/orText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="HOẶC"
-                android:textColor="#BDBDBD"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp" />
+                android:layout_marginEnd="8dp"
+                android:text="HOẶC"
+                android:textColor="#BDBDBD" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:background="#BDBDBD"
-                android:layout_marginStart="8dp" />
+                android:background="#BDBDBD" />
         </LinearLayout>
 
         <Button
@@ -98,11 +96,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Register V1"
-            app:layout_constraintTop_toBottomOf="@id/linearLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/rounded_button"
+            android:text="ĐĂNG KÍ"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout"
+
             />
 
         <Button
@@ -110,11 +110,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Register V2"
-            app:layout_constraintTop_toBottomOf="@id/registerButton1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/rounded_button"
+            android:text="ĐĂNG KÍ"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/registerButton1"
+
             />
 
         <Button
@@ -122,23 +123,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="LOGIN WITH FACE AND EMAIL V1"
-            app:layout_constraintTop_toBottomOf="@id/registerButton2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/rounded_button"
-            />
+            android:text="ĐĂNG NHẬP VỚI EMAIL VÀ KHUÔN MẶT"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/registerButton2" />
 
         <Button
             android:id="@+id/FaceAndEmail2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="LOGIN WITH FACE AND EMAIL V2"
-            app:layout_constraintTop_toBottomOf="@id/FaceAndEmail1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/rounded_button"
+            android:text="LOGIN WITH FACE AND EMAIL V2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/FaceAndEmail1"
+            android:visibility="gone"
             />
 
         <Button
@@ -146,24 +147,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="LOGIN WITH FACE V1"
-            app:layout_constraintTop_toBottomOf="@id/FaceAndEmail2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/rounded_button"
-            />
+            android:text="ĐĂNG NHẬP BẰNG KHUÔN MẶT"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/FaceAndEmail2" />
 
         <Button
             android:id="@+id/Face2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="LOGIN WITH FACE V2"
-            app:layout_constraintTop_toBottomOf="@id/Face1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/rounded_button"
-            />
+            android:text="LOGIN WITH FACE V2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/Face1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
