--- a/app/src/main/res/layout/item_post_market.xml
+++ b/app/src/main/res/layout/item_post_market.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
@@ -16,12 +17,14 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:scaleType="fitCenter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingClass" />
+
 
         <TextView
             android:id="@+id/nameTextView"
@@ -57,7 +60,7 @@
 
             <TextView
                 android:id="@+id/priceTextView"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:paddingBottom="5dp"
@@ -66,21 +69,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/dateIcon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:contentDescription="Date Icon"
-                android:src="@drawable/ic_date" />
 
-            <TextView
-                android:id="@+id/createAt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2024-10-22"
-                android:layout_marginLeft="3dp"
-                android:textColor="#B9B9B9"
-                android:textSize="14sp" />
         </LinearLayout>
 
 
