--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,7 +45,7 @@
         android:id="@+id/passwordRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Mật khẩu"
         android:inputType="textPassword"
         android:layout_marginTop="16dp"
         android:padding="12dp"
@@ -58,7 +58,7 @@
         android:id="@+id/confirmPasswordRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Confirm Password"
+        android:hint="Xác nhận mật khẩu"
         android:inputType="textPassword"
         android:layout_marginTop="16dp"
         android:padding="12dp"
@@ -72,7 +72,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="Username"
+        android:hint="Tên người dùng"
         android:inputType="text"
         android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@id/confirmPasswordRegister"
