--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -116,7 +116,8 @@
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@id/openCamera"/>
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
+        />
 
     <Button
         android:id="@+id/openCamera"
@@ -124,7 +125,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Chụp ảnh"
-        app:layout_constraintTop_toBottomOf="@id/registerConfirmButton"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
         android:background="@drawable/rounded_button"
         />
     <Button
@@ -132,7 +133,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@id/openCamera"
         android:text="ĐĂNG KÝ"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
