--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:gravity="center"
-            android:text="Koi Pond Paradise"
+            android:text="Phong thuỷ cá Koi"
             android:textColor="#000000"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="Consult Feng Shui"
+            android:text="Tư vấn phong thuỷ"
             android:textColor="#000000"
             android:textSize="18sp" />
     </LinearLayout>
@@ -97,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="Read Koi Articles"
+            android:text="Blog chia sẻ"
             android:textColor="#000000"
             android:textSize="18sp" />
     </LinearLayout>
@@ -125,7 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="Shop Koi Fish"
+            android:text="Mua bán"
             android:textColor="#000000"
             android:textSize="18sp" />
     </LinearLayout>
@@ -136,7 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:text="Popular Koi Fish"
+        android:text="Những loại cá Koi phổ biến"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold" />
