--- a/app/src/main/res/layout/item_post_mymarket.xml
+++ b/app/src/main/res/layout/item_post_mymarket.xml
@@ -11,8 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageView"
@@ -27,11 +26,11 @@
             android:id="@+id/nameTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:paddingTop="8dp"
             android:text="Product Name"
-            android:layout_marginLeft="16dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,8 +40,8 @@
             android:id="@+id/priceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="4dp"
             android:layout_marginLeft="16dp"
+            android:paddingTop="4dp"
 
             android:text="Product Price"
             app:layout_constraintBottom_toTopOf="@+id/editButton"
@@ -53,25 +52,24 @@
             android:id="@+id/editButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="4dp"
             android:backgroundTint="@android:color/holo_blue_light"
             android:text="Sửa"
             app:layout_constraintEnd_toStartOf="@+id/deleteButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/priceTextView"
-            />
+            app:layout_constraintTop_toBottomOf="@id/priceTextView" />
 
         <Button
             android:id="@+id/deleteButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
             android:backgroundTint="@android:color/holo_red_light"
             android:text="Xóa"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/editButton"
-            app:layout_constraintTop_toBottomOf="@id/priceTextView"
-            android:layout_marginRight="16dp"
-            />
+            app:layout_constraintTop_toBottomOf="@id/priceTextView" />
 
         <Button
             android:id="@+id/editImageButton"
@@ -81,9 +79,7 @@
             android:backgroundTint="@android:color/holo_green_light"
             android:text="Sửa ảnh"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
